--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -9,7 +9,7 @@ name: Update README
             jobs:
               build:
                 runs-on: ubuntu-latest
-                name: Update this repo's README with recent activity
+                name:  ⚡ update README with recent activity
             
                 steps:
                   - uses: actions/checkout@v2
