--- a/.github/workflows/recent_activity.yml
+++ b/.github/workflows/recent_activity.yml
@@ -12,6 +12,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2.3.4
-      - uses: Readme-Workflows/recent-activity@{2.3.4}
-        env:
+      - uses: Readme-Workflows/recent-activity@{2.3}        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
