--- a/.github/workflows/recent_activity.yml
+++ b/.github/workflows/recent_activity.yml
@@ -2,15 +2,16 @@ name: Update README
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # Update every 30 minutes
+    - cron: '*/30 * * * *'
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Update Profile README
+    name: Update this repo's README with recent activity
 
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: Readme-Workflows/recent-activity@{2.3}        env:
+      - uses: actions/checkout@v2
+      - uses: jamesgeorge007/github-activity-readme@master
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
