--- a/.github/workflows/recent_activity.yml
+++ b/.github/workflows/recent_activity.yml
@@ -2,8 +2,8 @@ name: Update README
 
 on:
   schedule:
+    # Runs every 30 minutes
     - cron: '*/30 * * * *'
-  workflow_dispatch:
 
 jobs:
   build:
